add get authorization code request validation, fix query parameters passing for redirects, fix static file links in html
